--- a/app/src/main/res/layout/activity_photo_add_screen.xml
+++ b/app/src/main/res/layout/activity_photo_add_screen.xml
@@ -44,42 +44,49 @@
         android:layout_marginStart="120dp"
         android:layout_marginBottom="42dp"
         android:text="Add Photo"
+        android:background="@drawable/butdeneme"
+        android:onClick="addPhoto"
+        android:textColor="@color/white"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toBottomOf="@+id/map"
         map:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttoneasy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:background="@drawable/buteasy"
         android:text="Easy"
+        android:onClick="easy"
         map:layout_constraintBottom_toTopOf="@+id/map"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toBottomOf="@+id/iconImageView" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonmedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/butmedium"
         android:text="Medium"
+        android:onClick="medium"
         map:layout_constraintBottom_toTopOf="@+id/map"
-        map:layout_constraintEnd_toStartOf="@+id/button4"
+        map:layout_constraintEnd_toStartOf="@+id/buttonhard"
         map:layout_constraintHorizontal_bias="0.535"
-        map:layout_constraintStart_toEndOf="@+id/button2"
+        map:layout_constraintStart_toEndOf="@+id/buttoneasy"
         map:layout_constraintTop_toBottomOf="@+id/iconImageView"
         map:layout_constraintVertical_bias="0.496" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonhard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:background="@drawable/buthard"
         android:text="Hard"
+        android:onClick="hard"
+
         map:layout_constraintBottom_toTopOf="@+id/map"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintTop_toBottomOf="@+id/iconImageView" />
