--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="deneme">#18d9d6</color>
+    <color name="medium">#e8ae0e</color>
     <color name ="easy">#4fb00b</color>
     <color name="hard">#a30b16</color>
 </resources>
