--- a/app/src/main/res/drawable/asdf.xml
+++ b/app/src/main/res/drawable/asdf.xml
@@ -2,7 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/apptheme"/>
-    <corners android:radius="15dp"/>
-
+    <solid android:color="@color/input_color"/>
+    <corners android:topLeftRadius="50dp" android:bottomLeftRadius="50dp"/>
 </shape>
