--- a/app/src/main/res/drawable/gamelogobutton.xml
+++ b/app/src/main/res/drawable/gamelogobutton.xml
@@ -3,6 +3,8 @@
     android:shape="rectangle">
 
     <solid android:color="@color/apptheme"/>
-    <corners android:radius="15dp"/>
+    <corners android:bottomRightRadius="50dp" android:bottomLeftRadius="50dp"/>
+
+
 
 </shape>
