--- a/app/src/main/res/drawable/joinlobby.xml
+++ b/app/src/main/res/drawable/joinlobby.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <solid android:color="@color/apptheme"/>
-    <corners android:radius="15dp"/>
+    <corners android:topRightRadius="50dp" android:bottomRightRadius="50dp"/>
 
 </shape>
