--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,13 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+
+    <color name="_bg___16_sign_up_screen__ek2_color">#FFFFFF</color>
+    <color name="_bg___17_login_screen_01_ek2_color">#FFFFFF</color>
+    <color name="input_color">#F0F0F0</color>
+    <color name="asd">#B5F1CC</color>
+    <color name="apptheme">#2E4E9B</color>
+    <color name="a">#128ee0</color>
     <color name="deneme">#18d9d6</color>
     <color name="medium">#e8ae0e</color>
     <color name ="easy">#4fb00b</color>
